Trying to configure docker and docker-compose.yml Adding matching service

--- a/matching/src/main/resources/application.yml
+++ b/matching/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
   datasource:
-    url: jdbc:postgresql://postgres-profil:54320/matchmaking
+    url: jdbc:postgresql://postgres-procedure:54321/procedure
     username: matchmaking
     password: matchmaking
