--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,46 +2,73 @@ version: '3'
 
 services:
 
-  postgres-procedure:
-    image: postgres
-    container_name: postgres-procedure
-    environment:
-      - POSTGRES_USER=matchmacking
-      - POSTGRES_PASSWORD=matchmacking
-      - POSTGRES_DB=matchmacking
-    ports:
-      - 54320:5432
-      
+#  postgres-procedure:
+#    image: postgres
+#    container_name: postgres-procedure
+#    environment:
+#      - POSTGRES_USER=procedure
+#      - POSTGRES_PASSWORD=procedure
+#      - POSTGRES_DB=procedure
+#    ports:
+#      - 54321:5432
+#    networks:
+#      - project
+
   postgres-profil:
     image: postgres
     container_name: postgres-profil
     environment:
-      - POSTGRES_USER=matchmacking
-      - POSTGRES_PASSWORD=matchmacking
-      - POSTGRES_DB=matchmacking
+      - POSTGRES_USER=matchmaking
+      - POSTGRES_PASSWORD=matchmaking
+      - POSTGRES_DB=matchmaking
     ports:
       - 54320:5432
+    networks:
+      - project
 
-
-  app:
+  profil:
+    container_name: profil
     image: profil
+    build:
+      context: profil
+      dockerfile: Dockerfile
+      args:
+        JAR_FILE: target/profil-0.0.1-SNAPSHOT.jar
+    expose:
+      - 8080
     ports:
-    - 8081:8081
+      - 8080:8080
     links:
-      - mongo
-    environment:
-      SPRING_DATA_MONGODB_URI: mongodb://mongo:27017/account
+      - postgres-profil
     networks:
-      - backend
-    container_name: app
+      - project
 
-  start_dependencies:
-    image: dadarek/wait-for-dependencies
-    depends_on:
-      - mongo
-    command: mongo:27017 
-    networks:
-      - backend
+#  matching:
+#    container_name: matching
+#    image: matching
+#    build:
+#      context: matching
+#      dockerfile: Dockerfile
+#      args:
+#        JAR_FILE: target/matching-0.0.1-SNAPSHOT.jar
+#    expose:
+#      - 8080
+#    ports:
+#      - 8081:8080
+#    links:
+#      - postgres-procedure
+#    networks:
+#      - project
+
+#  start_dependencies:
+#    image: dadarek/wait-for-dependencies
+#    depends_on:
+#      - postgres-profil
+#      - postgres-procedure
+#    command: postgres-profil:54320 postgres-procedure:54321
+#    networks:
+#      - project
 
 networks:
-  backend:
+  project:
+    driver: bridge
