--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,16 @@ services:
       - 8080
     ports:
       - 8081:8080
+
+  procedures:
+    container_name: procedures
+    image: procedures
+    build:
+      context: procedures
+      dockerfile: Dockerfile
+      args:
+        JAR_FILE: target/procedures-0.0.1-SNAPSHOT.jar
+    expose:
+      - 8080
+    ports:
+      - 8082:8080
