--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3'
 services:
 
   profil:
-    container_name: mtheos/profil
-    image: mtheos/profil
+    container_name: profil
+    image: profil
     build:
       context: profil
       dockerfile: Dockerfile
@@ -14,10 +14,12 @@ services:
       - 8080
     ports:
       - 8080:8080
+    networks:
+      - project
 
   matching:
-    container_name: mtheos/matching
-    image: mtheos/matching
+    container_name: matching
+    image: matching
     build:
       context: matching
       dockerfile: Dockerfile
@@ -27,10 +29,12 @@ services:
       - 8080
     ports:
       - 8081:8080
+    networks:
+      - project
 
   procedures:
-    container_name: mtheos/procedures
-    image: mtheos/procedures
+    container_name: procedures
+    image: procedures
     build:
       context: procedures
       dockerfile: Dockerfile
@@ -40,3 +44,9 @@ services:
       - 8080
     ports:
       - 8082:8080
+    networks:
+      - project
+
+networks:
+  project:
+    driver: bridge
